Add domain pricing and whois info
