# backend/api/src/main/java/com/getinstantdomains/api/dto/TldPropDto.java
@@ -1,0 +1,13 @@
+package com.getinstantdomains.api.dto;
+
+import lombok.Getter;
+import lombok.Setter;
+
+/**
+ * @author Biz Melesse created on 12/4/23
+ */
+@Getter @Setter
+public class TldPropDto {
+  private String tld;
+  private String price;
+}
